release 0.7 (2008-04-18)
- The class com.sun.ws.rest.api.core.ApplicationConfigAdapter can be
  used to adapt an instance of javax.ws.rs.core.ApplicationConfig to an
  instance of com.sun.ws.rest.api.core.ResourceConfig.
- Client API request building supports the addition of cookies that are 
  instances of javax.ws.rs.core.Cookie. Client API response supports obtaining
  the list of cookies returned by the server as instances of 
  javax.ws.rs.NewCookie.
- Renamed HttpContextAccess to HttpContext. Changed getHttpRequestContext
  and getHttpResponseContext methods to getRequest and getResponse respectively.
- UriRuleContext extends HttpContext. Removed UriRuleContext.getHttpContext()
  method.
- UriInfo interface is removed from HttpRequestContext. UriInfo is now
  accessible from HttpContext.getUriInfo()
- Fixed issue 44: Support dependency injection of proxied resources
  https://jersey.dev.java.net/issues/show_bug.cgi?id=44
  Added method ComponentProvider.getInjectableInstance
- The AbstractContainerResponse.writeEntity methods are reduced to one
  method that takes no arguments. This is responsible for committing the
  status, headers and writing out the entity (if any), and returning a 406
  (Not Acceptable) if a message body reader could not be found to serialize
  the entity for the required media type.
- The AbstractContainerResponse.commitStatusAndHeaders was modified to take
  a parameter that is the known length in bytes of the entity to be written
  as the representation of a response.
- Partially Integrated JSR 311 API 0.7
  - Use @Context to inject HttpServletRequest, HttpServletResponse, 
    ServletConfig and ServletContext instances on JAX-RS/Jersey-based 
    components deployed in Servlet container.
  - UriBuilder.build(String... values) changed to 
    UriBuilder.build(Object... values). 
    UriBuilder.build(Map<String, String> values) changed to 
    UriBuilder.build(Map<String, Object> values).